--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,28 +45,6 @@ jobs:
       - name: List build directory
         run: dir build
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset
-        id: upload-windows-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/IPParserInstaller.exe
-          asset_name: IPParserInstaller-1.0.${{ github.run_number }}-win64.exe
-          asset_content_type: application/vnd.microsoft.portable-executable
-
   build-ubuntu:
     runs-on: ubuntu-latest
     steps:
@@ -90,6 +68,16 @@ jobs:
       - name: Package
         run: cmake --build build --target package
 
+      - name: List Build Directory
+        run: ls -la build
+
+  create_release:
+    runs-on: ubuntu-latest
+    needs: [build-windows, build-ubuntu]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -100,17 +88,39 @@ jobs:
           release_name: Release ${{ github.run_number }}
           draft: false
           prerelease: false
+        outputs:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
 
-      - name: List Build Directory
-        run: ls -la build
+  upload-windows-asset:
+    needs: [create_release, build-windows]
+    runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Upload Release Asset
-        id: upload-ubuntu-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
+          asset_path: ./build/IPParserInstaller.exe
+          asset_name: IPParserInstaller-1.0.${{ github.run_number }}-win64.exe
+          asset_content_type: application/vnd.microsoft.portable-executable
+
+  upload-ubuntu-asset:
+    needs: [create_release, build-ubuntu]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
           asset_path: ./build/IPParser-1.0.${{ github.run_number }}-Linux.deb
           asset_name: IPParser-1.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
