--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,28 @@ jobs:
       - name: List build directory
         run: dir build
 
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-windows-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./build/IPParserInstaller.exe
+          asset_name: IPParserInstaller-1.0.${{ github.run_number }}-win64.exe
+          asset_content_type: application/vnd.microsoft.portable-executable
+
   build-ubuntu:
     runs-on: ubuntu-latest
     steps:
@@ -59,7 +81,6 @@ jobs:
         run: |
           cmake -Bbuild -S. -DPATCH_VERSION=${{ github.run_number }}
           cmake --build build
-
       # - name: Run tests
       #   run: |
       #     cd build
@@ -68,21 +89,9 @@ jobs:
       - name: Package
         run: cmake --build build --target package
 
-      - name: List Build Directory
-        run: ls -la build
-
-  create_release:
-    runs-on: ubuntu-latest
-    needs: [build-windows, build-ubuntu]
-    outputs:
-      upload_url: ${{ steps.create_release_step.outputs.upload_url }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Create Release
-        id: create_release_step
-        uses: actions/create-release@v1
+        id: create_release
+        uses: actions/create-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -91,46 +100,16 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Set upload_url output
-        id: set_output
-        run: echo "upload_url=${{ steps.create_release_step.outputs.upload_url }}" >> $GITHUB_ENV
-
-  upload-windows-asset:
-    needs: [create_release, build-windows]
-    runs-on: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: List build directory
-        run: dir build
-
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: ./build/IPParserInstaller.exe
-          asset_name: IPParserInstaller-1.0.${{ github.run_number }}-win64.exe
-          asset_content_type: application/vnd.microsoft.portable-executable
-
-  upload-ubuntu-asset:
-    needs: [create_release, build-ubuntu]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: List Build Directory
         run: ls -la build
 
       - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+        id: upload-ubuntu-release-asset
+        uses: actions/upload-release-asset@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./build/IPParser-1.0.${{ github.run_number }}-Linux.deb
           asset_name: IPParser-1.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
